@@ -1,3 +1,9 @@
+2000-04-10  Philippe De Muyter  <phdm@macqel.be>
+
+	* readelf (dynamic_segment_mips_val): Call `sprintf', not
+	`strftime' since strftime is not available on all systems.
+	(process_mips_specific): Ditto.
+
 2000-04-06  Alan Modra  <alan@linuxcare.com.au>
 
 	* addr2line.c: Update copyright.
